# pyvirgo

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
test/: test_example.py  test_graph.py  test_parse.py  test_preprocess.py  test_stability.py
test/files/: comments.vgo  config.vgo  cycle.vgo  edges.vgo  grid.vgo  make.vgo  nodes.vgo  sorting.vgo
virgo/: __init__.py  error.py  graph.py  internal.py  load.py  parse.py  preprocess.py
