[tool.poetry]
name = "pyvirgo"
version = "0.2.0-alpha.3"
description = "A Python package for the Virgo language"
authors = ["Jack Grahl <jack.grahl@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jwg4/pyvirgo"
repository = "https://github.com/jwg4/pyvirgo"
packages = [
    { include = "virgo" },
]

[tool.poetry.dependencies]
python = "^3.7"
ply = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
hypothesis = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
